styled input box,button

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
               required
               value="00"
             />
+            <label for="hours">hrs</label>
             <!-- input for minutes -->
             <input
               type="number"
@@ -35,6 +36,7 @@
               required
               value="00"
             />
+            <label for="minutes">mins</label>
             <!-- input for seconds -->
             <input
               type="number"
@@ -44,6 +46,7 @@
               required
               value="00"
             />
+            <label for="seconds">secs</label>
             <!-- input of zone -->
             <select id="zone-time" name="timeZone">
               <option value="am">am</option>
