createAlarm() method crated

--- a/index.html
+++ b/index.html
@@ -55,11 +55,13 @@
           </div>
           <!-- buttons -->
           <div class="button-container">
-            <button type="submit" id="setAlarm">Set Alarm</button>
+            <button type="submit" id="set-alarm">Set Alarm</button>
             <button type="button" id="stop">Stop</button>
           </div>
         </form>
       </div>
+
+      <div class="alarm-list"></div>
     </main>
 
     <script src="index.js" />
