render Alarm list method and styling done

--- a/index.html
+++ b/index.html
@@ -59,10 +59,19 @@
             <button type="button" id="stop">Stop</button>
           </div>
         </form>
-      </div>
+        <hr>
 
-      <div class="alarm-list"></div>
+        <h2>Upcoming Alarms</h2>
+        <ul class="alarms-list-container">
+           
+        </ul>
+
+      
     </main>
+
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
     <script src="index.js" />
   </body>
