--- a/index.html
+++ b/index.html
@@ -79,6 +79,6 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <!-- link of index.js file -->
-    <script src="index.js" />
+    <script src="index.js" ></script>
   </body>
 </html>
